feat: added 'Our Capabilities' section

--- a/index.html
+++ b/index.html
@@ -1,14 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="./style.css">
 	<title>Document</title>
 </head>
+
 <body>
 	<main>
 		<section></section>
-		<section></section>
+		<section class="capabilities">
+			<div class="capabilities__header">
+				<h2 class="capabilities__title">OUR CAPABILITIES</h2>
+				<div class="capabilities__right">
+					<p class="capabilities__subtitle">
+						Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam <br>
+						nonummy
+						nibh euismod tincidunt ut laoreet dolore magna aliquam erat.
+					</p>
+					<button class="btn capabilities--btn">ALL SERVICES</button>
+				</div>
+			</div>
+
+			<div class="capabilities__content">
+				<div class="capabilities__item">
+					<img src="./assets/images/capabilities-1.png" alt="capabilities-1">
+					<div class="capabilities__item__text">
+						<p class="capabilities__item__title">PROJECT AND CONSTRUCTION MANAGEMENT</p>
+						<p class="capabilities__item__subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+							diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+					</div>
+				</div>
+				<div class="capabilities__item">
+					<img src="./assets/images/capabilities-1.png" alt="capabilities-1">
+					<div class="capabilities__item__text">
+						<p class="capabilities__item__title">STRUCTURE AUDIT AND MAINTENANCE</p>
+						<p class="capabilities__item__subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+							diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+					</div>
+				</div>
+				<div class="capabilities__item">
+					<img src="./assets/images/capabilities-1.png" alt="capabilities-1">
+					<div class="capabilities__item__text">
+						<p class="capabilities__item__title">FACTORY CONSTRUCTION AND MODELING</p>
+						<p class="capabilities__item__subtitle">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed
+							diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat.</p>
+					</div>
+				</div>
+			</div>
+		</section>
 	</main>
 </body>
+
 </html>
